# redline-v2

./: POST_DRAFT.md  README.md  SPEC.md  baselines.py  make_baseline_chart.py  make_crownjewel.py  pyproject.toml  redline_v2.py  run_eval.sh  scoring.py  summarize_eval.py
.prime/: .env-metadata.json
configs/eval/: qwen-3-5.toml
configs/gepa/: qwen-3-5.toml
configs/rl/: oneshot-4b.toml  qwen.toml
