[project]
name = "redline-v2"
description = "Multi-term contract negotiation with a verifiable, Pareto-frontier reward (no judge)"
tags = ["multi-turn", "negotiation", "legal", "self-play", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["redline_v2.py", "scoring.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 16
rollouts_per_example = 3
